# snipdeck-backend

./: .env.example  .gitignore  main.py  pyproject.toml
src/: db.py  main.py
src/models/: snippet_versions.py  snippets.py
src/routes/: snippets.py
src/schemas/: snippets.py
src/services/: snippets.py
